Modulo AmProfile (está fallando la validación del campo gestor_perfil_id_padre

--- a/module/Administrator/view/layout/admin-layout.phtml
+++ b/module/Administrator/view/layout/admin-layout.phtml
@@ -9,7 +9,7 @@ $basePath = $this->basePath() . '/administrator';
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <?php echo $this->headTitle('ABS Consultor')->setSeparator(' - ')->setAutoEscape(false) ?>
+    <?php echo $this->headTitle('')->setSeparator(' - ')->setAutoEscape(false) ?>
 
     <?php echo $this->headMeta()
         ->appendName('viewport', 'width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no')
@@ -37,10 +37,10 @@ $basePath = $this->basePath() . '/administrator';
             <!-- mini logo for sidebar mini 50x50 pixels -->
             <!-- <img src="<?php echo $basePath."/img/gestor/logo_empresa.jpg";?>"/> -->
             <!--<span class="logo-mini"><?php /*echo $settings->nameClient;*/?></span>-->
-            <span class="logo-mini">ABS Consultor</span>
+            <span class="logo-mini"><!--ABS Consultor--></span>
             <!-- logo for regular state and mobile devices -->
             <!--<span class="logo-lg"><?php /*echo $settings->nameClient;*/?></span>-->
-            <span class="logo-lg">ABS Consultor</span>
+            <span class="logo-lg"><!--ABS Consultor--></span>
         </a>
 
         <!-- Header Navbar -->
