--- a/module/Administrator/view/layout/admin-login-layout.phtml
+++ b/module/Administrator/view/layout/admin-login-layout.phtml
@@ -6,7 +6,7 @@ echo $this->doctype(); ?>
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <?php echo $this->headTitle('ABS Consultor - Login')->setSeparator(' - ')->setAutoEscape(false) ?>
+    <?php echo $this->headTitle('')->setSeparator(' - ')->setAutoEscape(false) ?>
 
     <?php echo $this->headMeta()
         ->appendName('viewport', 'width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport')
@@ -32,7 +32,7 @@ echo $this->doctype(); ?>
 <body class="hold-transition login-page">
 <div class="login-box">
     <div class="login-logo">
-        ABS Consultor
+        <!--ABS Consultor-->
         <!--<img src="<?php /*echo $basePath;*/?>/img/gestor/logo_empresa.jpg">-->
     </div><!-- /.login-logo -->
     <div class="login-box-body">
