--- a/module/AmMenu/view/am-menu/am-menu-module/add.phtml
+++ b/module/AmMenu/view/am-menu/am-menu-module/add.phtml
@@ -1,14 +1,16 @@
 <?php
 
-$title = 'Edit controller';
+$title = $padre == -1 ? 'Create menu entry' : 'Create submenu entry';
+
 $this->headTitle($title);
 
 $form = $this->form;
 
-$gestorFormRow = $this->gestor_form_row();
+$gestorFormRow = $this->administrator_form_row();
 
 $form->prepare();
 ?>
+
 <div class="row">
     <div class="col-md-12">
         <div class="box box-primary">
@@ -18,14 +20,18 @@ $form->prepare();
             <?php echo $this->form()->openTag($form);?>
             <div class="box-body">
                 <?php
-                echo $gestorFormRow->render($form->get('nombreZend'));
-                echo $gestorFormRow->render($form->get('nombreUsable'));
+                echo $gestorFormRow->render($form->get('texto'));
+                echo $gestorFormRow->render($form->get('gestorControladorId'));
+                echo $gestorFormRow->render($form->get('accion'));
                 ?>
             </div>
             <div class="box-footer">
                 <?php
                 $submitButton = $form->get('submit');
+
                 echo $this->formHidden($form->get('id'));
+                echo $this->formHidden($form->get('padre'));
+                echo $this->formHidden($form->get('orden'));
                 echo $this->formSubmit($submitButton);
                 ?>
             </div>
