--- a/module/AmUser/view/am-user/am-user-module/edit.phtml
+++ b/module/AmUser/view/am-user/am-user-module/edit.phtml
@@ -25,8 +25,8 @@ $form->prepare();
                 echo $gestorFormRow->render($form->get('checkPassword'));
                 echo $gestorFormRow->render($form->get('password'));
                 echo $gestorFormRow->render($form->get('password2'));
-                echo $gestorFormRow->render($form->get('fechaAlta'));
-                echo $gestorFormRow->render($form->get('ultimoLogin'));
+                echo $gestorFormRow->render($form->get('createdAt'));
+                echo $gestorFormRow->render($form->get('lastLogin'));
                 ?>
             </div>
             <div class="box-footer">
