--- a/module/AmUser/view/am-user/am-user-module/index.phtml
+++ b/module/AmUser/view/am-user/am-user-module/index.phtml
@@ -41,8 +41,8 @@ $this->headTitle($title);
 
                             ?>
                         </td>
-                        <td><?php echo $elemento->fechaAlta;?></td>
-                        <td><?php echo $elemento->ultimoLogin;?></td>
+                        <td><?php echo $elemento->createdAt;?></td>
+                        <td><?php echo $elemento->lastLogin;?></td>
                         <td><?php echo $elemento->nombre;?></td>
                         <td class="text-center">
 
