--- a/module/Administrator/view/layout/admin-layout.phtml
+++ b/module/Administrator/view/layout/admin-layout.phtml
@@ -86,7 +86,7 @@ $basePath = $this->basePath() . '/administrator';
                                     <a href="#" class="btn btn-default btn-flat">Profile</a>
                                 </div> -->
                                 <div class="pull-right">
-                                    <a href="/login/logout" class="btn btn-default btn-flat">Sign out</a>
+                                    <a href="/admin/login/logout" class="btn btn-default btn-flat">Sign out</a>
                                 </div>
                             </li>
                         </ul>
