Cambio de nombre en AmController. Pasa a llamarse AmModule. La gestión manual de añadir Módulos también desaparece. Se ha creado un servicio llamado moduleService que checkea los modulos de administrador que hay dados de alta y comprueba que existan en BD. Si no existen, se añade un nuevo registro en la tabla gestor_modules (antigua gestor_controlador) Nuevo parámetro en application.config: hidden_modules. Todo módulo que haya dentro de dicho array no se mostrará en la lógica de permisos

--- a/module/AmMenu/view/am-menu/am-menu-module/add.phtml
+++ b/module/AmMenu/view/am-menu/am-menu-module/add.phtml
@@ -21,7 +21,7 @@ $form->prepare();
             <div class="box-body">
                 <?php
                 echo $gestorFormRow->render($form->get('texto'));
-                echo $gestorFormRow->render($form->get('gestorControladorId'));
+                echo $gestorFormRow->render($form->get('gestorModuleId'));
                 echo $gestorFormRow->render($form->get('accion'));
                 ?>
             </div>
