--- a/module/AmMenu/view/am-menu/am-menu-module/index.phtml
+++ b/module/AmMenu/view/am-menu/am-menu-module/index.phtml
@@ -21,7 +21,7 @@ $this->headTitle($title);
                                 <a data-toggle="collapse" data-parent="#menu_accordion" href="#collapse<?=$i?>">
                                     <?=$entrada->texto;?>
                                 </a>
-                                <?php if (count($entrada->hijos) > 0) :?>
+                                <?php if (count($entrada->hijos) == 0) :?>
                                     <a class="btn btn-remove" href="<?php echo $this->url('administrator', array('module' => 'menu','action'=>'delete', 'id' => $entrada->id));?>"><i class="fa fa-remove"></i></a>
                                 <?php endif;?>
                                 <a class="btn" href="<?php echo $this->url('administrator',array('module' => 'menu','action'=>'edit', 'id' => $entrada->id));?>"><i class="fa fa-edit"></i></a>
