Refactorizando DatatableService. Hemos quitado peso al código del método indexAction del controlador que tenía lógica de listados con Datatables. Lo hemos aplicado al modulo de Users como ejemplo

--- a/module/Administrator/view/administrator/list-datatable.phtml
+++ b/module/Administrator/view/administrator/list-datatable.phtml
@@ -1,9 +1,5 @@
-<?php
+<?php $this->headTitle($title); ?>
 
-
-$this->headTitle($title);
-
-?>
 <div class="row">
     <div class="col-md-12">
         <div class="box box-primary">
