--- a/module/AmMenu/view/am-menu/am-menu-module/edit.phtml
+++ b/module/AmMenu/view/am-menu/am-menu-module/edit.phtml
@@ -5,6 +5,8 @@ $this->headTitle($title);
 
 $form = $this->form;
 
+$fieldset = $form->get('AmMenu\Form\MenuFieldset');
+
 $gestorFormRow = $this->administrator_form_row();
 
 $form->prepare();
@@ -19,17 +21,17 @@ $form->prepare();
             <?php echo $this->form()->openTag($form);?>
             <div class="box-body">
                 <?php
-                echo $gestorFormRow->render($form->get('texto'));
-                echo $gestorFormRow->render($form->get('gestorModuleId'));
-                echo $gestorFormRow->render($form->get('accion'));
+                echo $gestorFormRow->render($fieldset->get('texto'));
+                echo $gestorFormRow->render($fieldset->get('gestorModuleId'));
+                echo $gestorFormRow->render($fieldset->get('accion'));
                 ?>
             </div>
             <div class="box-footer">
                 <?php
                 $submitButton = $form->get('submit');
-                echo $this->formHidden($form->get('id'));
-                echo $this->formHidden($form->get('padre'));
-                echo $this->formHidden($form->get('orden'));
+                echo $this->formHidden($fieldset->get('id'));
+                echo $this->formHidden($fieldset->get('padre'));
+                echo $this->formHidden($fieldset->get('orden'));
                 echo $this->formSubmit($submitButton);
                 ?>
             </div>
