--- a/module/AmModule/view/am-module/am-module-module/edit.phtml
+++ b/module/AmModule/view/am-module/am-module-module/edit.phtml
@@ -5,10 +5,13 @@ $this->headTitle($title);
 
 $form = $this->form;
 
+$fieldset = $form->get('AmModule\Form\ModuleFieldset');
+
 $gestorFormRow = $this->administrator_form_row();
 
 $form->prepare();
 ?>
+
 <div class="row">
     <div class="col-md-12">
         <div class="box box-primary">
@@ -18,14 +21,14 @@ $form->prepare();
             <?php echo $this->form()->openTag($form);?>
             <div class="box-body">
                 <?php
-                echo $gestorFormRow->render($form->get('nombreZend'));
-                echo $gestorFormRow->render($form->get('nombreUsable'));
+                echo $gestorFormRow->render($fieldset->get('nombreZend'));
+                echo $gestorFormRow->render($fieldset->get('nombreUsable'));
                 ?>
             </div>
             <div class="box-footer">
                 <?php
                 $submitButton = $form->get('submit');
-                echo $this->formHidden($form->get('id'));
+                echo $this->formHidden($fieldset->get('id'));
                 echo $this->formSubmit($submitButton);
                 ?>
             </div>
