--- a/module/AmMenu/view/am-menu/am-menu-module/add.phtml
+++ b/module/AmMenu/view/am-menu/am-menu-module/add.phtml
@@ -5,11 +5,10 @@ $this->headTitle($title);
 
 $form = $this->form;
 
-$fieldset = $form->get('AmMenu\Form\MenuFieldset');
-
 $gestorFormRow = $this->administrator_form_row();
 
 $form->prepare();
+
 ?>
 
 <div class="row">
@@ -18,25 +17,11 @@ $form->prepare();
             <div class="box-header with-border">
                 <h3 class="box-title"><?php echo $this->escapeHtml($title); ?></h3>
             </div>
-            <?php echo $this->form()->openTag($form);?>
-            <div class="box-body">
-                <?php
-                echo $gestorFormRow->render($fieldset->get('texto'));
-                echo $gestorFormRow->render($fieldset->get('gestorModuleId'));
-                echo $gestorFormRow->render($fieldset->get('accion'));
-                ?>
-            </div>
-            <div class="box-footer">
-                <?php
-                $submitButton = $form->get('submit');
-
-                echo $this->formHidden($fieldset->get('id'));
-                echo $this->formHidden($fieldset->get('padre'));
-                echo $this->formHidden($fieldset->get('orden'));
-                echo $this->formSubmit($submitButton);
-                ?>
-            </div>
-            <?php echo $this->form()->closeTag();?>
+            <?php
+            echo $this->form()->openTag($form);
+            echo $gestorFormRow->render($form);
+            echo $this->form()->closeTag();
+            ?>
         </div>
     </div>
 </div>
