--- a/module/AmBlog/view/am-blog/am-blog-module/edit.phtml
+++ b/module/AmBlog/view/am-blog/am-blog-module/edit.phtml
@@ -15,20 +15,11 @@ $form->prepare();
             <div class="box-header with-border">
                 <h3 class="box-title"><?php echo $this->escapeHtml($title); ?></h3>
             </div>
-            <?php echo $this->form()->openTag($form);?>
-            <div class="box-body">
-                <?php
-                // echo $gestorFormRow->render($form->get('[variable]'));
-                ?>
-            </div>
-            <div class="box-footer">
-                <?php
-                /*$submitButton = $form->get('submit');
-                echo $this->formHidden($form->get('id'));
-                echo $this->formSubmit($submitButton);*/
-                ?>
-            </div>
-            <?php echo $this->form()->closeTag();?>
+            <?php
+            echo $this->form()->openTag($form);
+            echo $gestorFormRow->render($form);
+            echo $this->form()->closeTag();
+            ?>
         </div>
     </div>
 </div>
