--- a/module/AmProfile/view/am-profile/am-profile-module/add.phtml
+++ b/module/AmProfile/view/am-profile/am-profile-module/add.phtml
@@ -5,8 +5,6 @@ $this->headTitle($title);
 
 $form = $this->form;
 
-$fieldset = $form->get('AmProfile\Form\ProfileFieldset');
-
 $gestorFormRow = $this->administrator_form_row();
 
 $form->prepare();
@@ -18,23 +16,11 @@ $form->prepare();
             <div class="box-header with-border">
                 <h3 class="box-title"><?php echo $this->escapeHtml($title); ?></h3>
             </div>
-            <?php echo $this->form()->openTag($form);?>
-            <div class="box-body">
-                <?php
-                echo $gestorFormRow->render($fieldset->get('nombre'));
-                echo $gestorFormRow->render($fieldset->get('descripcion'));
-                echo $gestorFormRow->render($fieldset->get('esAdmin'));
-                echo $gestorFormRow->render($fieldset->get('permisos'));
-                ?>
-            </div>
-            <div class="box-footer">
-                <?php
-                $submitButton = $form->get('submit');
-                echo $this->formHidden($fieldset->get('id'));
-                echo $this->formSubmit($submitButton);
-                ?>
-            </div>
-            <?php echo $this->form()->closeTag(); ?>
+            <?php
+            echo $this->form()->openTag($form);
+            echo $gestorFormRow->render($form);
+            echo $this->form()->closeTag();
+            ?>
         </div>
     </div>
 </div>
