--- a/module/AmUser/view/am-user/am-user-module/edit.phtml
+++ b/module/AmUser/view/am-user/am-user-module/edit.phtml
@@ -5,8 +5,6 @@ $this->headTitle($title);
 
 $form = $this->form;
 
-$fieldset = $form->get('AmUser\Form\UserFieldset');
-
 $gestorFormRow = $this->administrator_form_row();
 
 $form->prepare();
@@ -19,26 +17,11 @@ $form->prepare();
             <div class="box-header with-border">
                 <h3 class="box-title"><?php echo $this->escapeHtml($title); ?></h3>
             </div>
-            <?php echo $this->form()->openTag($form); ?>
-            <div class="box-body">
-                <?php
-                echo $gestorFormRow->render($fieldset->get('login'));
-                echo $gestorFormRow->render($fieldset->get('gestorPerfilId'));
-                echo $gestorFormRow->render($fieldset->get('checkPassword'));
-                echo $gestorFormRow->render($fieldset->get('password'));
-                echo $gestorFormRow->render($fieldset->get('password2'));
-                echo $gestorFormRow->render($fieldset->get('createdAt'));
-                echo $gestorFormRow->render($fieldset->get('lastLogin'));
-                ?>
-            </div>
-            <div class="box-footer">
-                <?php
-                $submitButton = $form->get('submit');
-                echo $this->formHidden($fieldset->get('id'));
-                echo $this->formSubmit($submitButton);
-                ?>
-            </div>
-            <?php echo $this->form()->closeTag();?>
+            <?php
+            echo $this->form()->openTag($form);
+            echo $gestorFormRow->render($form);
+            echo $this->form()->closeTag();
+            ?>
         </div>
     </div>
 </div>
