Refactorizando el pintado de las vistas de creación y edición. Dado el nivel de abstracción que vamos consiguiendo, las vistas de edición y creación son todas iguales al 99%, por lo que todos los módulos que sigan la lógica definida por defecto, podrán tirar de las vistas add.phtml y edit.pthml del módulo Administrator

--- a/module/Administrator/view/administrator/add.phtml
+++ b/module/Administrator/view/administrator/add.phtml
@@ -1,7 +1,6 @@
 <?php
 
-$title = $padre == -1 ? 'Create menu entry' : 'Create submenu entry';
-$this->headTitle($title);
+$this->headTitle($this->title);
 
 $form = $this->form;
 
