--- a/module/Administrator/view/layout/admin-layout.phtml
+++ b/module/Administrator/view/layout/admin-layout.phtml
@@ -26,6 +26,7 @@ $basePath = $this->basePath() . '/administrator';
         ->appendStylesheet($basePath . '/css/skins/skin-blue.min.css')
         ->appendStylesheet($basePath . '/libs/datatables/dataTables.bootstrap.css')
         ->appendStylesheet($basePath . '/libs/daterangepicker/daterangepicker-bs3.css')
+        ->appendStylesheet($basePath . '/libs/plupload/2.1.9/js/jquery.plupload.queue/css/jquery.plupload.queue.css')
         ->appendStylesheet($basePath . '/css/style.css')
 
          ?>
@@ -188,12 +189,15 @@ $basePath = $this->basePath() . '/administrator';
     ->appendFile($basePath . '/js/html5shiv.js',   'text/javascript', array('conditional' => 'lt IE 9',))
     ->appendFile($basePath . '/js/respond.min.js', 'text/javascript', array('conditional' => 'lt IE 9',))
     ->appendFile($basePath . '/libs/jQuery/jQuery-2.1.4.min.js')
+    ->appendFile($basePath . '/libs/jQueryUI/jQuery-ui.min.js')
     ->appendFile($basePath . '/libs/bootstrap/js/bootstrap.min.js')
     ->appendFile($basePath . '/libs/datatables/jquery.dataTables.js')
     ->appendFile($basePath . '/libs/datatables/dataTables.bootstrap.min.js')
     ->appendFile($basePath . '/libs/daterangepicker/moment-with-locales.js')
     ->appendFile($basePath . '/libs/select2/js/select2.min.js')
     ->appendFile($basePath . '/libs/sortable/sortable.min.js')
+    ->appendFile($basePath . '/libs/plupload/2.1.9/js/plupload.full.min.js')
+    ->appendFile($basePath . '/libs/plupload/2.1.9/js/jquery.plupload.queue/jquery.plupload.queue.min.js')
     ->appendFile($basePath . '/js/build/administrator.min.js')
 ;
 
