Bloque Media integrado en la edición de un post del módulo Blog. Tiene el funcionamiento básico (guarda el registro en la tabla media y el archivo en la ruta correspondiente). Queda pendiente guardar las imágenes separadas por carpetas en función del módulo y refactorizar los servicios para adaptarlos a nuestro uso.

--- a/module/AmMedia/view/block/block.phtml
+++ b/module/AmMedia/view/block/block.phtml
@@ -6,6 +6,8 @@
             </div>
             <div class="box-body">
                 <div id="uploader"></div>
+                <input type="hidden" id="media_module_target" value="<?=$moduleTarget?>" />
+                <input type="hidden" id="media_module_id" value="<?=$id?>" />
             </div>
         </div>
     </div>
