Descargada la librería Font Awesome. Ya no tira del cdn Eliminamos los iconos de Ionicons. No parece que los estemos usando y al tirar desde el cdn, a veces ralentizaba la carga. Conector de la librería RichFilemanager integrado dentro del módulo AmMedia. El siguente paso será refactorizar las clases y adaptarlas a zend

--- a/module/Administrator/view/layout/admin-layout.phtml
+++ b/module/Administrator/view/layout/admin-layout.phtml
@@ -27,8 +27,7 @@ $basePath = $this->basePath() . '/administrator';
         ->prependStylesheet($basePath . '/css/skins/skin-blue.min.css')
         ->prependStylesheet($basePath . '/css/AdminLTE.min.css')
         ->prependStylesheet($basePath . '/libs/select2/css/select2.min.css')
-        ->prependStylesheet('https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css')
-        ->prependStylesheet('https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css')
+        ->prependStylesheet($basePath . '/libs/font-awesome/css/font-awesome.min.css')
         ->prependStylesheet($basePath . '/libs/bootstrap/css/bootstrap.min.css')
 
          ?>
