Integrando CKEditor con FileManager

--- a/module/Administrator/view/administrator/edit.phtml
+++ b/module/Administrator/view/administrator/edit.phtml
@@ -1,4 +1,7 @@
 <?php
+$basePath = $this->basePath() . '/administrator/libs/';
+
+$this->headScript()->appendFile($basePath . "ckeditor/ckeditor.js");
 
 $this->headTitle($this->title);
 
