--- a/module/AmMedia/view/am-media/am-media-module/index.phtml
+++ b/module/AmMedia/view/am-media/am-media-module/index.phtml
@@ -22,7 +22,7 @@ $this->headScript()
 ->appendFile($basePath . "scripts/jQuery-File-Upload/js/jquery.fileupload-process.js")
 ->appendFile($basePath . "scripts/jQuery-File-Upload/js/jquery.fileupload-image.js")
 ->appendFile($basePath . "scripts/jQuery-File-Upload/js/jquery.fileupload-validate.js")
-->appendFile($basePath . "scripts/filemanager.min.js");
+->appendFile($basePath . "scripts/filemanager.js");
 ?>
 <script>
     window._FMConfig = {
