--- a/module/Administrator/view/layout/admin-layout.phtml
+++ b/module/Administrator/view/layout/admin-layout.phtml
@@ -21,6 +21,7 @@ $basePath = $this->basePath() . '/administrator';
 
 
         ->prependStylesheet($basePath . '/css/style.css')
+        ->prependStylesheet($basePath . '/libs/RichFilemanager/themes/administrator/styles/filemanager.css')
         ->prependStylesheet($basePath . '/libs/plupload/2.1.9/js/jquery.plupload.queue/css/jquery.plupload.queue.css')
         ->prependStylesheet($basePath . '/libs/daterangepicker/daterangepicker-bs3.css')
         ->prependStylesheet($basePath . '/libs/datatables/dataTables.bootstrap.css')
